--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,17 +5,17 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="ENG_ITSS" content="ENG_ITSS English learning app" />
+	<meta name="Minna no Eigo" content="Minna no Eigo English learning app" />
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-	<title>ENG_ITSS - Ứng dụng học tiếng Anh</title>
+	<title>Minna no Eigo - Ứng dụng học tiếng Anh</title>
 	<meta name="description" content="Ứng dụng học tiếng Anh miễn phí cho người Việt">
-	<meta property="og:title" content="ENG_ITSS - Ứng dụng học tiếng Anh miễn phí cho người Việt">
+	<meta property="og:title" content="Minna no Eigo - Ứng dụng học tiếng Anh miễn phí cho người Việt">
 	<meta property="og:url" content="https://dynonary.herokuapp.com">
 	<meta property="og:type" content="website">
 	<meta property="og:image:height" content="630">
 	<meta property="og:image:width" content="1200">
-	<meta property="og:site_name" content="ENG_ITSS">
+	<meta property="og:site_name" content="Minna no Eigo">
 	<meta property="og:image"
 		content="https://res.cloudinary.com/instagram-cloud-store/image/upload/v1639994777/default_tk6vnk.jpg">
 	<meta property="og:description"
